--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/CornOnTheCob.html">Corn on the Cob</a>
+    <ul>
+        <li><a href="recipes/CornOnTheCob.html">Corn on the Cob</a></li>
+        <li><a href="recipes/CornOnTheCob.html">Corn on the Cob</a></li>
+        <li><a href="recipes/CornOnTheCob.html">Corn on the Cob</a></li>
+    </ul>
+
 </body>
 </html>
