--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <ul>
         <li><a href="recipes/CornOnTheCob.html">Corn on the Cob</a></li>
-        <li><a href="recipes/CornOnTheCob.html">Corn on the Cob</a></li>
-        <li><a href="recipes/CornOnTheCob.html">Corn on the Cob</a></li>
+        <li><a href="recipes/ChickenSalad.html">Corn on the Cob</a></li>
+        <li><a href="recipes/CoffeeCreamer.html">Corn on the Cob</a></li>
     </ul>
 
 </body>
