--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
 
+    <!-- <a href="recipes/CornOnTheCob.html">Corn on the Cob</a>
+    <a href="recipes/ChickenSalad.html">Chicken Salad</a>
+    <a href="recipes/CoffeeCreamer.html">Coffee Creamer</a> -->
+
+
+    <!-- Looks better without ul -->
     <ul>
         <li><a href="recipes/CornOnTheCob.html">Corn on the Cob</a></li>
         <li><a href="recipes/ChickenSalad.html">Chicken Salad</a></li>
