--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
-    <!-- <a href="recipes/CornOnTheCob.html">Corn on the Cob</a>
-    <a href="recipes/ChickenSalad.html">Chicken Salad</a>
-    <a href="recipes/CoffeeCreamer.html">Coffee Creamer</a> -->
+    <div>
+        <a href="recipes/CornOnTheCob.html">Corn on the Cob</a>
+        <a href="recipes/ChickenSalad.html">Chicken Salad</a>
+        <a href="recipes/CoffeeCreamer.html">Coffee Creamer</a>
+    </div>
 
 
     <!-- Looks better without ul -->
-    <ul>
+    <!-- <ul>
         <li><a href="recipes/CornOnTheCob.html">Corn on the Cob</a></li>
         <li><a href="recipes/ChickenSalad.html">Chicken Salad</a></li>
         <li><a href="recipes/CoffeeCreamer.html">Coffee Creamer</a></li>
-    </ul>
+    </ul> -->
 
 </body>
 </html>
